File Re-structure

--- a/Index.html
+++ b/Index.html
@@ -2,28 +2,32 @@
 <html>
 
 <head>
-<script  src='assets/js/app/vector2f.js' type="text/javascript"></script>
-<script  src='assets/js/app/vector3f.js' type="text/javascript"></script>
-<script  src='assets/js/app/quaterion.js' type="text/javascript"></script>
-<script  src='assets/js/app/mesh.js' type="text/javascript"></script>
-<script  src='assets/js/app/matrix2f.js' type="text/javascript"></script>
-<script  src='assets/js/app/matrix3f.js' type="text/javascript"></script>
-<script  src='assets/js/app/matrix4f.js' type="text/javascript"></script>
-<script src='assets/js/app/display.js' type="text/javascript"></script>
-<script  src='assets/js/app/shader.js' type="text/javascript"></script>
-<script  src='assets/js/app/material.js' type="text/javascript"></script>
-<script  src='assets/js/app/filerequest.js' type="text/javascript"></script>
-<script  src='assets/js/app/vertex.js' type="text/javascript"></script>
-<script  src='assets/js/app/texture.js' type="text/javascript"></script>
-<script  src='assets/js/app/renderutils.js' type="text/javascript"></script>
-<script  src='assets/js/app/screen.js' type="text/javascript"></script>
-<script  src='assets/js/app/transform3d.js' type="text/javascript"></script>
-<script  src='assets/js/app/camera.js' type="text/javascript"></script>
-<script  src='assets/js/app/model.js' type="text/javascript"></script>
-<script  src='assets/js/app/mouse.js' type="text/javascript"></script>
-<script  src='assets/js/app/keyboard.js' type="text/javascript"></script>
-<script  src='assets/js/app/game.js' type="text/javascript"></script>
-<script  src='assets/js/app/time.js' type="text/javascript"></script>
+    <!-- Core Engine folder files -->
+<script  src='assets/js/app/core/vector2f.js' type="text/javascript"></script>
+<script  src='assets/js/app/core/vector3f.js' type="text/javascript"></script>
+<script  src='assets/js/app/core/quaterion.js' type="text/javascript"></script>
+<script  src='assets/js/app/core/matrix2f.js' type="text/javascript"></script>
+<script  src='assets/js/app/core/matrix3f.js' type="text/javascript"></script>
+<script  src='assets/js/app/core/matrix4f.js' type="text/javascript"></script>
+<script src='assets/js/app/core/display.js' type="text/javascript"></script>
+<script  src='assets/js/app/core/transform3d.js' type="text/javascript"></script>
+<script  src='assets/js/app/core/camera.js' type="text/javascript"></script>
+<script  src='assets/js/app/core/mouse.js' type="text/javascript"></script>
+<script  src='assets/js/app/core/keyboard.js' type="text/javascript"></script>
+<script  src='assets/js/app/core/time.js' type="text/javascript"></script>
+<script  src='assets/js/app/core/material.js' type="text/javascript"></script>
+<script  src='assets/js/app/core/filerequest.js' type="text/javascript"></script>
+<script  src='assets/js/app/core/vertex.js' type="text/javascript"></script>
+<script  src='assets/js/app/core/texture.js' type="text/javascript"></script>
+
+<!-- Renderer Engine folder files -->
+<script  src='assets/js/app/renderer/mesh.js' type="text/javascript"></script>
+<script  src='assets/js/app/renderer/shader.js' type="text/javascript"></script>
+<script  src='assets/js/app/renderer/renderutils.js' type="text/javascript"></script>
+<script  src='assets/js/app/renderer/model.js' type="text/javascript"></script>
+
+<!-- Game folder files -->
+<script  src='assets/js/app/game/game.js' type="text/javascript"></script>
 <style>
     .page-wrapper
     {
