--- a/Index.html
+++ b/Index.html
@@ -19,13 +19,19 @@
 <script  src='assets/js/app/core/filerequest.js' type="text/javascript"></script>
 <script  src='assets/js/app/core/vertex.js' type="text/javascript"></script>
 <script  src='assets/js/app/core/texture.js' type="text/javascript"></script>
-
+<script  src='assets/js/app/core/input.js' type="text/javascript"></script>
+<script  src='assets/js/app/core/xgl.js' type="text/javascript"></script>
 <!-- Renderer Engine folder files -->
 <script  src='assets/js/app/renderer/mesh.js' type="text/javascript"></script>
 <script  src='assets/js/app/renderer/shader.js' type="text/javascript"></script>
+<script  src='assets/js/app/renderer/basicshader.js' type="text/javascript"></script>
+<script  src='assets/js/app/renderer/phongshader.js' type="text/javascript"></script>
 <script  src='assets/js/app/renderer/renderutils.js' type="text/javascript"></script>
 <script  src='assets/js/app/renderer/model.js' type="text/javascript"></script>
+ 
 
+ <script  src='assets/js/app/physics/baselight.js' type="text/javascript"></script>
+ <script  src='assets/js/app/physics/directionlight.js' type="text/javascript"></script>
 <!-- Game folder files -->
 <script  src='assets/js/app/game/game.js' type="text/javascript"></script>
 <style>
