Directional Light Implement

--- a/Index.html
+++ b/Index.html
@@ -32,6 +32,10 @@
 
  <script  src='assets/js/app/physics/baselight.js' type="text/javascript"></script>
  <script  src='assets/js/app/physics/directionlight.js' type="text/javascript"></script>
+  <script  src='assets/js/app/physics/pointlight.js' type="text/javascript"></script>
+   <script  src='assets/js/app/physics/attenuation.js' type="text/javascript"></script>
+  
+  
 <!-- Game folder files -->
 <script  src='assets/js/app/game/game.js' type="text/javascript"></script>
 <style>
