--- a/Index.html
+++ b/Index.html
@@ -27,6 +27,10 @@
 <script  src='assets/js/app/renderer/basicshader.js' type="text/javascript"></script>
 <script  src='assets/js/app/renderer/phongshader.js' type="text/javascript"></script>
 <script  src='assets/js/app/renderer/renderutils.js' type="text/javascript"></script>
+<script  src='assets/js/app/renderer/xcomponent.js' type="text/javascript"></script>
+<script  src='assets/js/app/renderer/xobject.js' type="text/javascript"></script>
+
+<script  src='assets/js/app/renderer/meshcomponent.js' type="text/javascript"></script>
 <script  src='assets/js/app/renderer/model.js' type="text/javascript"></script>
  
 
