--- a/Index.html
+++ b/Index.html
@@ -49,6 +49,10 @@
 <!-- Game folder files -->
 <script  src='assets/js/app/game/game.js' type="text/javascript"></script>
 <style>
+    html,body{
+        margin:0;
+        padding:0;
+    }
     .page-wrapper
     {
       overflow: hidden; 
@@ -83,8 +87,8 @@
       
        var  texture = Texture.load("gpu1.png");
       
-      controller.getCamera().setPersp(70.0,controller.getSystem().getDisplay().getWidth(),
-      controller.getSystem().getDisplay().getHeight(), 0.01, 1000.0);
+      controller.getCamera().setPersp(70.0,Display.getInstance().getWidth(),
+      Display.getInstance().getHeight(), 0.01, 1000.0);
       controller.getCamera().setEnableKeyboard(true);
       controller.getCamera().setEnableMouse(true);
        var material = new Material(texture, new Vector3f(0,0,0));
